--- a/app/src/main/res/layout/activity_registrarse.xml
+++ b/app/src/main/res/layout/activity_registrarse.xml
@@ -17,6 +17,14 @@
         android:layout_height="wrap_content"
         android:visibility="gone"/>
 
+    <ImageButton
+        android:onClick="volverlogin"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="16dp"
+        android:layout_marginStart="330dp"
+        app:srcCompat="@android:drawable/ic_menu_revert" />
+
     <ImageView
         android:id="@+id/imageView3"
         android:layout_width="347dp"
@@ -87,4 +95,5 @@
         android:layout_marginStart="25dp"
         android:layout_marginEnd="25dp"
         android:layout_marginTop="3dp"/>
+
 </LinearLayout>
