--- a/app/src/main/res/menu/activity_main_drawer.xml
+++ b/app/src/main/res/menu/activity_main_drawer.xml
@@ -2,28 +2,20 @@
 <menu xmlns:android="http://schemas.android.com/apk/res/android">
     <group>
         <item android:id="@+id/nav_item_one"
-            android:icon="@drawable/instaa"
+            android:icon="@drawable/rombo"
             android:title="Inicio"/>
         <item android:id="@+id/nav_item_two"
-            android:icon="@drawable/instaa"
-            android:title="¿Quienes somos?"/>
-        <item android:id="@+id/nav_item_three"
-            android:icon="@drawable/instaa"
+            android:icon="@drawable/rombo"
             android:title="Productos"/>
-        <item android:id="@+id/nav_item_four"
-            android:icon="@drawable/instaa"
+        <item android:id="@+id/nav_item_three"
+            android:icon="@drawable/rombo"
             android:title="Quejas y reclamos"/>
-
-        <item android:title="Ayuda">
-            <menu>
-                <item android:id="@+id/nav_item_six"
-                    android:icon="@drawable/instaa"
-                    android:title="Item 1"/>
-                <item android:id="@+id/nav_item_seven"
-                    android:icon="@drawable/instaa"
-                    android:title="Itema 2"/>
-            </menu>
-
-        </item>
     </group>
+    <item android:title="Otros">
+        <menu>
+            <item android:id="@+id/nav_item_four"
+                android:icon="@drawable/rombo"
+                android:title="Cerrar sesión "/>
+        </menu>
+    </item>
 </menu>
