Se agrega lo llevado a la fecha 08/07/2022

--- a/app/src/main/res/drawable-v24/button_roundedborder.xml
+++ b/app/src/main/res/drawable-v24/button_roundedborder.xml
@@ -3,5 +3,5 @@
     <corners android:radius="16dp"/>
     <stroke
         android:width="2dp"
-        android:color="@color/design_default_color_secondary"/>
+        android:color="#128c7e"/>
 </shape>
