--- a/app/src/main/res/layout/activity_product3.xml
+++ b/app/src/main/res/layout/activity_product3.xml
@@ -4,100 +4,8 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="#ff7043"
+    android:background="#ece5dd"
     tools:context=".Product3">
-
-    <ImageView
-        android:id="@+id/imageView9"
-        android:layout_width="302dp"
-        android:layout_height="154dp"
-        android:layout_marginStart="5dp"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/textView18"
-        app:srcCompat="@drawable/biome3" />
-
-    <TextView
-        android:id="@+id/textView18"
-        android:layout_width="329dp"
-        android:layout_height="66dp"
-        android:layout_marginStart="2dp"
-        android:layout_marginTop="16dp"
-        android:gravity="center"
-        android:text="DRONE CON CAMARA HD DE 4 K AJUSTABLE DE 90 °, WIFI 5G"
-        android:textColor="@color/black"
-        android:textStyle="bold"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
-
-    <TextView
-        android:id="@+id/textView19"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginStart="5dp"
-        android:text="$1.200.000"
-        android:textColor="@color/black"
-        android:textStyle="italic"
-        app:layout_constraintBottom_toBottomOf="@+id/imageView9"
-        app:layout_constraintStart_toEndOf="@+id/imageView9"
-        app:layout_constraintTop_toBottomOf="@+id/textView18" />
-
-    <TextView
-        android:id="@+id/textView20"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginStart="5dp"
-        android:layout_marginTop="5dp"
-        android:text="El CW-25 es una plataforma UAV de ala fija VTOL híbrida (batería y gasolina) diseñada para misiones de área grande. El CW-25 tiene una larga vida útil, es rápido, tiene una gran carga útil, es estructuralmente estable y confiable, y puede volar continuamente a grandes altitudes (altitud máxima de despegue ≥ 4500 m y altitud máxima de vuelo ≥ 6500 m)."
-        android:textColor="@color/black"
-        android:textStyle="italic"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/imageView9" />
-
-    <ImageView
-        android:id="@+id/imageView10"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginStart="5dp"
-        android:layout_marginTop="5dp"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/textView21"
-        app:srcCompat="@drawable/biome" />
-
-    <TextView
-        android:id="@+id/textView21"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="30dp"
-        android:text="DRONE CON WIFI 5G Y GPS - VIDEO EN VIVO 4K"
-        android:textColor="@color/black"
-        android:textStyle="bold"
-        app:layout_constraintTop_toBottomOf="@+id/textView20"
-        tools:layout_editor_absoluteX="53dp" />
-
-    <TextView
-        android:id="@+id/textView22"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginStart="5dp"
-        android:text="$500.000"
-        android:textColor="@color/black"
-        android:textStyle="italic"
-        app:layout_constraintBottom_toBottomOf="@+id/imageView10"
-        app:layout_constraintStart_toEndOf="@+id/imageView10"
-        app:layout_constraintTop_toTopOf="@+id/imageView10" />
-
-    <TextView
-        android:id="@+id/textView23"
-        android:layout_width="385dp"
-        android:layout_height="106dp"
-        android:layout_marginStart="5dp"
-        android:layout_marginTop="5dp"
-        android:text="Equipado con cuatro motores sin escobillas de alta calidad, las baterías de capacidad proporcionan hasta 18 minutos de tiempo de vuelo después de cada carga completa.
-        Transmisión WiFi 5G con cámara 4K HD a través de esta cámara WiFi 5G, puedes capturar imágenes 4K súper claras, lo mejor para selfies y grabar cada momento de tu vida."
-        android:textColor="@color/black"
-        android:textStyle="italic"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/imageView10" />
 
     <ImageButton
         android:onClick="volverinicio"
@@ -105,6 +13,7 @@
         android:layout_height="wrap_content"
         android:layout_marginTop="16dp"
         android:layout_marginEnd="16dp"
+        android:background="@drawable/button_rounded"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintTop_toTopOf="parent"
         app:srcCompat="@android:drawable/ic_menu_revert" />
