--- a/app/src/main/res/layout/activity_description_product.xml
+++ b/app/src/main/res/layout/activity_description_product.xml
@@ -9,7 +9,7 @@
 
 
     <ImageView
-        android:id="@+id/photoView"
+        android:id="@+id/fotoAmpliada"
         android:layout_width="200dp"
         android:layout_height="200dp"
         android:layout_marginTop="50dp"
@@ -22,8 +22,9 @@
 
     <TextView
         android:id="@+id/descriptionAmpliada"
-        android:layout_width="wrap_content"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:layout_marginTop="200dp"
         android:layout_marginStart="50dp"
         android:layout_marginEnd="50dp"
         android:text="TextView"
@@ -31,6 +32,6 @@
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/fotoAmpliada"
         tools:text="Aqui va la informacion" />
 </androidx.constraintlayout.widget.ConstraintLayout>
