--- a/app/src/main/res/layout/app_bar_main.xml
+++ b/app/src/main/res/layout/app_bar_main.xml
@@ -8,7 +8,7 @@
     android:background="@color/white"
     android:backgroundTint="#ece5dd"
     android:orientation="vertical"
-    tools:context=".MainActivity">
+    tools:context=".RecyclerMain">
 
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/Recycler"
@@ -16,8 +16,12 @@
         android:layout_height="0dp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_bias="0.0">
+
+    </androidx.recyclerview.widget.RecyclerView>
 </androidx.constraintlayout.widget.ConstraintLayout>
 
 
