--- a/app/src/main/res/layout/segunda_activity.xml
+++ b/app/src/main/res/layout/segunda_activity.xml
@@ -10,9 +10,11 @@
     tools:context=".MainActivity"
     tools:openDrawer="start">
 
+
+
     <include
         android:id="@+id/included"
-        layout="@layout/app_bar_main"
+        layout="@layout/mostar_productos"
         android:layout_width="match_parent"
         android:layout_height="match_parent" />
 
@@ -28,5 +30,7 @@
         app:itemTextColor="@color/black"
         app:menu="@menu/activity_main_drawer"
         app:subheaderColor="@color/black" />
+
+
 
 </androidx.drawerlayout.widget.DrawerLayout>
