--- a/app/src/main/res/layout/activity_quejasy_reclamos.xml
+++ b/app/src/main/res/layout/activity_quejasy_reclamos.xml
@@ -6,7 +6,7 @@
     android:layout_height="match_parent"
     tools:context=".QuejasyReclamos"
     android:orientation="vertical"
-    android:background="#ece5dd">
+    android:background="@color/white">
 
     <ImageView
         android:id="@+id/imageView3"
