--- a/app/src/main/res/layout/app_bar_main.xml
+++ b/app/src/main/res/layout/app_bar_main.xml
@@ -6,7 +6,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="@color/white"
-    android:backgroundTint="#ece5dd"
+    android:backgroundTint="@color/white"
     android:orientation="vertical"
     tools:context=".RecyclerMain">
 
