--- a/app/src/main/res/layout/primera_activity.xml
+++ b/app/src/main/res/layout/primera_activity.xml
@@ -6,7 +6,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical"
-    android:background="#3C3F4E"
+    android:background="@color/white"
     tools:context=".LoginActivity"
     android:backgroundTint="#ece5dd">
 
