--- a/app/src/main/res/layout/segunda_activity.xml
+++ b/app/src/main/res/layout/segunda_activity.xml
@@ -5,7 +5,7 @@
     android:id="@+id/drawer_layout"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@color/principal"
+    android:background="@color/white"
     android:backgroundTint="#128c7e"
     tools:context=".MainActivity"
     tools:openDrawer="start">
@@ -24,7 +24,7 @@
         android:layout_width="wrap_content"
         android:layout_height="match_parent"
         android:layout_gravity="start"
-        android:backgroundTint="#ece5dd"
+        android:backgroundTint="@color/white"
         app:headerLayout="@layout/nav_header_main"
         app:itemIconTint="#128c7e"
         app:itemTextColor="@color/black"
