Solo falta el footer

--- a/app/src/main/res/layout/activity_description_product.xml
+++ b/app/src/main/res/layout/activity_description_product.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
@@ -11,19 +11,22 @@
         android:layout_height="wrap_content"
         android:id="@+id/scrollView">
 
-        <androidx.constraintlayout.widget.ConstraintLayout
+        <androidx.appcompat.widget.LinearLayoutCompat
             android:layout_width="fill_parent"
-            android:layout_height="fill_parent">
+            android:layout_height="wrap_content"
+            android:orientation="vertical"
+            android:gravity="center">
 
             <TextView
                 android:id="@+id/tituloxml"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
+                android:layout_marginTop="50dp"
                 app:layout_constraintBottom_toTopOf="@id/fotoAmpliada"
                 android:layout_marginBottom="20dp"
                 android:textStyle="bold"
-                android:textSize="35dp"
-                android:textColor="@color/black"
+                android:textSize="35sp"
+                android:textColor="#075e54"
                 app:layout_constraintEnd_toEndOf="parent"
                 tools:text="Aqui va el titulo"
                 app:layout_constraintStart_toStartOf="parent"
@@ -33,7 +36,7 @@
                 android:layout_width="200dp"
                 android:layout_height="200dp"
                 android:layout_marginStart="50dp"
-                android:layout_marginTop="50dp"
+                android:layout_marginTop="25dp"
                 android:layout_marginEnd="50dp"
                 android:layout_marginBottom="20dp"
                 app:layout_constraintBottom_toTopOf="@+id/descriptionAmpliada"
@@ -45,19 +48,18 @@
             <TextView
                 android:id="@+id/descriptionAmpliada"
                 android:layout_width="match_parent"
-                android:textSize="25dp"
+                android:textSize="18sp"
                 android:layout_height="wrap_content"
-                android:layout_marginTop="0dp"
+                android:layout_marginTop="25dp"
                 android:layout_marginStart="50dp"
                 android:layout_marginEnd="50dp"
-                android:text="TextView"
                 android:textColor="@color/black"
                 app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toBottomOf="@+id/fotoAmpliada"
-                tools:text="Aqui va la informacion" />
+                tools:text="Aqui va la informacion xxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxx" />
 
-        </androidx.constraintlayout.widget.ConstraintLayout>
+        </androidx.appcompat.widget.LinearLayoutCompat>
     </ScrollView>
-</RelativeLayout>
+</LinearLayout>
