--- a/app/src/main/res/layout/mostar_productos.xml
+++ b/app/src/main/res/layout/mostar_productos.xml
@@ -7,12 +7,13 @@
     android:background="@color/white">
     <TextView
         android:id="@+id/textView"
-        android:layout_width="wrap_content"
+        android:layout_width="300dp"
         android:layout_height="wrap_content"
+        android:gravity="center"
         android:layout_marginTop="20dp"
         android:textStyle="italic"
         android:textColor="#075e54"
-        android:textSize="18dp"
+        android:textSize="18sp"
         android:text="Despliega el menu lateral para mas informacion."
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
@@ -30,10 +31,11 @@
 
     <TextView
         android:id="@+id/textView2"
-        android:layout_width="wrap_content"
+        android:layout_width="match_parent"
+        android:gravity="center"
         android:layout_height="wrap_content"
         android:layout_marginBottom="20dp"
-        android:textSize="25dp"
+        android:textSize="25sp"
         android:text="¡BIENVENIDOS A APP LEGEND!"
         android:textColor="#075e54"
         android:textStyle="bold"
