--- a/app/src/main/res/layout/activity_description_product.xml
+++ b/app/src/main/res/layout/activity_description_product.xml
@@ -18,6 +18,7 @@
             android:gravity="center">
 
             <TextView
+                android:layout_weight="1"
                 android:id="@+id/tituloxml"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
@@ -32,6 +33,7 @@
                 app:layout_constraintStart_toStartOf="parent"
                 />
             <ImageView
+                android:layout_weight="1"
                 android:id="@+id/fotoAmpliada"
                 android:layout_width="200dp"
                 android:layout_height="200dp"
@@ -46,6 +48,7 @@
                 tools:background="@color/black" />
 
             <TextView
+                android:layout_weight="1"
                 android:id="@+id/descriptionAmpliada"
                 android:layout_width="match_parent"
                 android:textSize="18sp"
@@ -59,6 +62,45 @@
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toBottomOf="@+id/fotoAmpliada"
                 tools:text="Aqui va la informacion xxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxx" />
+
+            <androidx.constraintlayout.widget.ConstraintLayout
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:orientation="horizontal">
+
+                <ImageView
+                    android:id="@+id/imageView2"
+                    android:layout_width="50dp"
+                    android:layout_height="50dp"
+                    android:layout_marginStart="35dp"
+                    android:layout_marginBottom="36dp"
+                    app:layout_constraintBottom_toBottomOf="parent"
+                    app:layout_constraintStart_toStartOf="parent"
+                    app:srcCompat="@drawable/logo" />
+
+                <TextView
+                    android:id="@+id/textView3"
+                    android:layout_width="230dp"
+                    android:layout_height="50dp"
+                    android:layout_marginBottom="36dp"
+                    android:gravity="center"
+                    android:text="App Legend    Líneas de atención 01-8000-12444 o al 313 333 3333 "
+                    android:textColor="@color/black"
+                    android:textSize="13sp"
+                    app:layout_constraintBottom_toBottomOf="parent"
+                    app:layout_constraintStart_toEndOf="@+id/imageView2" />
+
+                <TextView
+                    android:id="@+id/textView4"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_marginBottom="55dp"
+                    android:text="2022"
+                    android:textColor="@color/black"
+                    android:textSize="13sp"
+                    app:layout_constraintBottom_toBottomOf="parent"
+                    app:layout_constraintStart_toEndOf="@+id/textView3" />
+            </androidx.constraintlayout.widget.ConstraintLayout>
 
         </androidx.appcompat.widget.LinearLayoutCompat>
     </ScrollView>
