--- a/app/src/main/res/layout/activity_quejasy_reclamos.xml
+++ b/app/src/main/res/layout/activity_quejasy_reclamos.xml
@@ -10,6 +10,7 @@
     android:background="@color/white">
 
     <ImageView
+
         android:id="@+id/imageView3"
         android:layout_width="347dp"
         android:layout_height="166dp"
@@ -18,6 +19,7 @@
         app:srcCompat="@drawable/quejas" />
 
     <TextView
+
         android:id="@+id/textView24"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
@@ -30,6 +32,7 @@
         android:text="Para nosotros es muy importante tu opinión, es por eso que de antemano te pedimos disculpas por cualquier incidente." />
 
     <TextView
+
         android:id="@+id/textView25"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
@@ -42,6 +45,7 @@
         android:text="Estamos para atender tus insatisfacciones con nuestros productos, por favor comunícate con nosotros, un asesor tendrá el gusto de atenderte." />
 
     <TextView
+
         android:id="@+id/textView26"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
@@ -55,6 +59,7 @@
 " />
 
     <Button
+
         android:onClick="volverinicio"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
@@ -63,4 +68,43 @@
         android:layout_marginTop="3dp"
         android:background="@drawable/button_rounded"
         android:text="INICIO" />
+
+    <androidx.constraintlayout.widget.ConstraintLayout
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:orientation="horizontal">
+
+        <ImageView
+            android:id="@+id/imageView2"
+            android:layout_width="50dp"
+            android:layout_height="50dp"
+            android:layout_marginStart="35dp"
+            android:layout_marginBottom="36dp"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:srcCompat="@drawable/logo" />
+
+        <TextView
+            android:id="@+id/textView3"
+            android:layout_width="230dp"
+            android:layout_height="50dp"
+            android:layout_marginBottom="36dp"
+            android:gravity="center"
+            android:text="App Legend    Líneas de atención 01-8000-12444 o al 313 333 3333 "
+            android:textColor="@color/black"
+            android:textSize="13sp"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintStart_toEndOf="@+id/imageView2" />
+
+        <TextView
+            android:id="@+id/textView4"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginBottom="55dp"
+            android:text="2022"
+            android:textColor="@color/black"
+            android:textSize="13sp"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintStart_toEndOf="@+id/textView3" />
+    </androidx.constraintlayout.widget.ConstraintLayout>
 </LinearLayout>
